[gd_scene load_steps=14 format=4 uid="uid://c84sfbn2e7dnq"]

[ext_resource type="Script" uid="uid://6lc11sccbhka" path="res://map_phase/houses/house_1_room.gd" id="1_2qk7u"]
[ext_resource type="TileSet" uid="uid://xgb1kfo8b417" path="res://map_phase/houses/house2_full_asset_tileset.tres" id="2_uuc6d"]
[ext_resource type="Shader" uid="uid://dax5u6f5b2eii" path="res://dev/shaders/screen_effect.gdshader" id="6_uuc6d"]
[ext_resource type="QuadMesh" uid="uid://b7bui5a06ao3p" path="res://dev/shaders/mesh_empty.tres" id="7_rj3yu"]
[ext_resource type="PackedScene" uid="uid://egbkdyoie7lc" path="res://map_phase/houses/assets/House 1/chest.tscn" id="8_6keb6"]
[ext_resource type="PackedScene" uid="uid://bpd8l2bnrcvqr" path="res://map_phase/houses/assets/npcs/little_girl.tscn" id="8_tkphy"]
[ext_resource type="AudioStream" uid="uid://dole1vr4lxacx" path="res://art/Audio Assets/chest_open.mp3" id="10_6keb6"]
[ext_resource type="AudioStream" uid="uid://jbn3j0i3cw0x" path="res://art/Audio Assets/obtained_item.mp3" id="11_gwxqy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2qk7u"]
size = Vector2(47.999992, 8.833335)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tkphy"]
shader = ExtResource("6_uuc6d")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuc6d"]
size = Vector2(11.333336, 11.333336)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tkphy"]
size = Vector2(12.500004, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rj3yu"]

[node name="House1Room" type="Node2D"]
modulate = Color(0.42, 0.42, 0.42, 1)
y_sort_enabled = true
scale = Vector2(3, 3)
script = ExtResource("1_2qk7u")

[node name="Marker2D-SpawnP" type="Marker2D" parent="."]
position = Vector2(149, 211)

[node name="Layer0" type="TileMapLayer" parent="." groups=["tilemaps"]]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAMAAgABAAEAAAABAAQAAgABAAEAAAABAAUAAgABAAEAAAABAAYAAgABAAEAAAABAAcAAgABAAEAAAABAAgAAgABAAEAAAABAAkAAgABAAEAAAABAAoAAgABAAEAAAABAAsAAgABAAEAAAABAAwAAgABAAEAAAABAA0AAgABAAEAAAABAA4AAgABAAEAAAACAAMAAgABAAEAAAACAAQAAgABAAEAAAACAAUAAgABAAEAAAACAAYAAgABAAEAAAACAAcAAgABAAEAAAACAAgAAgABAAEAAAACAAkAAgABAAEAAAACAAoAAgABAAEAAAACAAsAAgABAAEAAAACAAwAAgABAAEAAAACAA0AAgABAAEAAAACAA4AAgABAAEAAAADAAMAAgABAAEAAAADAAQAAgABAAEAAAADAAUAAgABAAEAAAADAAYAAgABAAEAAAADAAcAAgABAAEAAAADAAgAAgABAAEAAAADAAkAAgABAAEAAAADAAoAAgABAAEAAAADAAsAAgABAAEAAAADAAwAAgABAAEAAAADAA0AAgABAAEAAAADAA4AAgABAAEAAAAEAAMAAgABAAEAAAAEAAQAAgABAAEAAAAEAAUAAgABAAEAAAAEAAYAAgABAAEAAAAEAAcAAgABAAEAAAAEAAgAAgABAAEAAAAEAAkAAgABAAEAAAAEAAoAAgABAAEAAAAEAAsAAgABAAEAAAAEAAwAAgABAAEAAAAEAA0AAgABAAEAAAAEAA4AAgABAAEAAAAFAAMAAgABAAEAAAAFAAQAAgABAAEAAAAFAAUAAgABAAEAAAAFAAYAAgABAAEAAAAFAAcAAgABAAEAAAAFAAgAAgABAAEAAAAFAAkAAgABAAEAAAAFAAoAAgABAAEAAAAFAAsAAgABAAEAAAAFAAwAAgABAAEAAAAFAA0AAgABAAEAAAAFAA4AAgABAAEAAAAGAAMAAgABAAEAAAAGAAQAAgABAAEAAAAGAAUAAgABAAEAAAAGAAYAAgABAAEAAAAGAAcAAgABAAEAAAAGAAgAAgABAAEAAAAGAAkAAgABAAEAAAAGAAoAAgABAAEAAAAGAAsAAgABAAEAAAAGAAwAAgABAAEAAAAGAA0AAgABAAEAAAAGAA4AAgABAAEAAAAHAAMAAgABAAEAAAAHAAQAAgABAAEAAAAHAAUAAgABAAEAAAAHAAYAAgABAAEAAAAHAAcAAgABAAEAAAAHAAgAAgABAAEAAAAHAAkAAgABAAEAAAAHAAoAAgABAAEAAAAHAAsAAgABAAEAAAAHAAwAAgABAAEAAAAHAA0AAgABAAEAAAAHAA4AAgABAAEAAAAIAAMAAgABAAEAAAAIAAQAAgABAAEAAAAIAAUAAgABAAEAAAAIAAYAAgABAAEAAAAIAAcAAgABAAEAAAAIAAgAAgABAAEAAAAIAAkAAgABAAEAAAAIAAoAAgABAAEAAAAIAAsAAgABAAEAAAAIAAwAAgABAAEAAAAIAA0AAgABAAEAAAAIAA4AAgABAAEAAAAJAAMAAgABAAEAAAAJAAQAAgABAAEAAAAJAAUAAgABAAEAAAAJAAYAAgABAAEAAAAJAAcAAgABAAEAAAAJAAgAAgABAAEAAAAJAAkAAgABAAEAAAAJAAoAAgABAAEAAAAJAAsAAgABAAEAAAAJAAwAAgABAAEAAAAJAA0AAgABAAEAAAAJAA4AAgABAAEAAAAKAAMAAgABAAEAAAAKAAQAAgABAAEAAAAKAAUAAgABAAEAAAAKAAYAAgABAAEAAAAKAAcAAgABAAEAAAAKAAgAAgABAAEAAAAKAAkAAgABAAEAAAAKAAoAAgABAAEAAAAKAAsAAgABAAEAAAAKAAwAAgABAAEAAAAKAA0AAgABAAEAAAAKAA4AAgABAAEAAAALAAMAAgABAAEAAAALAAQAAgABAAEAAAALAAUAAgABAAEAAAALAAYAAgABAAEAAAALAAcAAgABAAEAAAALAAgAAgABAAEAAAALAAkAAgABAAEAAAALAAoAAgABAAEAAAALAAsAAgABAAEAAAALAAwAAgABAAEAAAALAA0AAgABAAEAAAALAA4AAgABAAEAAAAMAAMAAgABAAEAAAAMAAQAAgABAAEAAAAMAAUAAgABAAEAAAAMAAYAAgABAAEAAAAMAAcAAgABAAEAAAAMAAgAAgABAAEAAAAMAAkAAgABAAEAAAAMAAoAAgABAAEAAAAMAAsAAgABAAEAAAAMAAwAAgABAAEAAAAMAA0AAgABAAEAAAAMAA4AAgABAAEAAAANAAMAAgABAAEAAAANAAQAAgABAAEAAAANAAUAAgABAAEAAAANAAYAAgABAAEAAAANAAcAAgABAAEAAAANAAgAAgABAAEAAAANAAkAAgABAAEAAAANAAoAAgABAAEAAAANAAsAAgABAAEAAAANAAwAAgABAAEAAAANAA0AAgABAAEAAAANAA4AAgABAAEAAAAOAAUAAgABAAEAAAAOAAYAAgABAAEAAAAOAAcAAgABAAEAAAAOAAgAAgABAAEAAAAOAAkAAgABAAEAAAAOAAoAAgABAAEAAAAOAAsAAgABAAEAAAAOAAwAAgABAAEAAAAOAA0AAgABAAEAAAAOAA4AAgABAAEAAAAPAAUAAgABAAEAAAAPAAYAAgABAAEAAAAPAAcAAgABAAEAAAAPAAgAAgABAAEAAAAPAAkAAgABAAEAAAAPAAoAAgABAAEAAAAPAAsAAgABAAEAAAAPAAwAAgABAAEAAAAPAA0AAgABAAEAAAAPAA4AAgABAAEAAAAQAAMAAgABAAEAAAAQAAQAAgABAAEAAAAQAAUAAgABAAEAAAAQAAYAAgABAAEAAAAQAAcAAgABAAEAAAAQAAgAAgABAAEAAAAQAAkAAgABAAEAAAAQAAoAAgABAAEAAAAQAAsAAgABAAEAAAAQAAwAAgABAAEAAAAQAA0AAgABAAEAAAAQAA4AAgABAAEAAAARAAMAAgABAAEAAAARAAQAAgABAAEAAAARAAUAAgABAAEAAAARAAYAAgABAAEAAAARAAcAAgABAAEAAAARAAgAAgABAAEAAAARAAkAAgABAAEAAAARAAoAAgABAAEAAAARAAsAAgABAAEAAAARAAwAAgABAAEAAAARAA0AAgABAAEAAAARAA4AAgABAAEAAAAOAAMAAgABAAEAAAAOAAQAAgABAAEAAAAPAAMAAgABAAEAAAAPAAQAAgABAAEAAAA=")
tile_set = ExtResource("2_uuc6d")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_uuc6d")
format = 2

[node name="Walls" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAACAAMABAABAAAAAAADAAMABAABAAAAAAAEAAMABAABAAAAAAAFAAMABAABAAAAAAAGAAMABAABAAAAAAAHAAMABAABAAAAAAAIAAMABAABAAAAAAAJAAMABAABAAAAAAAKAAMABAABAAAAAAALAAMABAABAAAAAAAMAAMABAABAAAAAAANAAMABAABAAAAAAAQAAMABAABAAAAAAARAAMABAACAAAAAAABAAMABAAAAAAAAAARAAQABAACAAEAAAARAAUABAACAAEAAAARAAYABAACAAEAAAARAAcABAACAAEAAAARAAgABAACAAEAAAARAAkABAACAAEAAAARAAoABAACAAEAAAARAAsABAACAAEAAAARAAwABAACAAEAAAARAA0ABAACAAIAAAARAA4ABAAAAAMAAAAQAA4ABAAAAAMAAAACAA4ABAAAAAMAAAADAA4ABAAAAAMAAAAEAA4ABAAAAAMAAAAFAA4ABAAAAAMAAAAGAA4ABAAAAAMAAAAHAA4ABAAAAAMAAAALAA4ABAAAAAMAAAAMAA4ABAAAAAMAAAANAA4ABAAAAAMAAAAOAA4ABAAAAAMAAAAPAA4ABAAAAAMAAAABAAQABAAAAAEAAAABAAUABAAAAAEAAAABAAYABAAAAAEAAAABAAcABAAAAAEAAAABAAgABAAAAAEAAAABAAkABAAAAAEAAAABAAoABAAAAAEAAAABAAsABAAAAAEAAAABAAwABAAAAAEAAAABAA0ABAAAAAIAAAABAA4ABAAAAAMAAAAOAAMABAABAAAAAAAPAAMABAABAAAAAAACAA0ABAABAAIAAAADAA0ABAABAAIAAAAEAA0ABAABAAIAAAAFAA0ABAABAAIAAAAGAA0ABAABAAIAAAAHAA0ABAABAAIAAAALAA0ABAABAAIAAAAMAA0ABAABAAIAAAANAA0ABAABAAIAAAAOAA0ABAABAAIAAAAPAA0ABAABAAIAAAAQAA0ABAABAAIAAAA=")
tile_set = ExtResource("2_uuc6d")

[node name="Items" type="TileMapLayer" parent="TileMap"]
position = Vector2(3.6666667, 0)
tile_map_data = PackedByteArray("AAAIAAUABQACAAIAAAAIAAYABQACAAMAAAAJAAUABQADAAIAAAAJAAYABQADAAMAAAAGAAUABQAIAAIAAAAGAAYABQAIAAMAAAAHAAUABQAJAAIAAAAHAAYABQAJAAMAAAAKAAUABQAIAAIAAAAKAAYABQAIAAMAAAALAAUABQAJAAIAAAALAAYABQAJAAMAAAA=")
tile_set = ExtResource("2_uuc6d")

[node name="Area2D-BackToWorld" type="Area2D" parent="."]
z_index = 10
position = Vector2(152.66667, 110)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-BackToWorld"]
position = Vector2(-1.3333282, 126.08334)
shape = SubResource("RectangleShape2D_2qk7u")

[node name="Marker2D-OutFromP" type="Marker2D" parent="."]
position = Vector2(238.33334, 68.33333)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="MeshInstance2D-ShaderCRTVig" type="MeshInstance2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_tkphy")
mesh = ExtResource("7_rj3yu")

[node name="LittleGirl" parent="." instance=ExtResource("8_tkphy")]
z_index = 10
position = Vector2(189.66667, 140.66667)

[node name="Node" type="Node" parent="."]

[node name="Area2D" type="StaticBody2D" parent="Node"]
position = Vector2(360, 311)
scale = Vector2(3, 3)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Area2D"]
position = Vector2(-4.3333282, -4.3333282)
shape = SubResource("RectangleShape2D_uuc6d")

[node name="Area2D3" type="StaticBody2D" parent="Node"]
position = Vector2(551, 308)
scale = Vector2(3, 3)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Area2D3"]
position = Vector2(-4, -3.000005)
shape = SubResource("RectangleShape2D_tkphy")

[node name="Area2D2" type="StaticBody2D" parent="Node"]
position = Vector2(457, 310)
scale = Vector2(3, 3)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Area2D2"]
position = Vector2(-4.3333435, -4.333336)
shape = SubResource("RectangleShape2D_rj3yu")

[node name="Chest" parent="." instance=ExtResource("8_6keb6")]
position = Vector2(149.33333, 120)

[node name="AudioStreamPlayer2D-open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_6keb6")

[node name="AudioStreamPlayer2D-GottenItem" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_gwxqy")

[connection signal="body_entered" from="Area2D-BackToWorld" to="." method="_on_area_2d_back_to_world_body_entered"]
